Fixed bug on mobile, added about view

--- a/public/static/sass/app.sass
+++ b/public/static/sass/app.sass
@@ -13,8 +13,9 @@ body
 	-moz-background-size: cover
 
 main
+	min-height: 100%
+	height: auto
 	padding-top: 75px
-	height: 100%
 	background: rgb(255,255,255)
 	background: rgba(255,255,255,0.8)
 
